# Task1

./: .drone.yml  .gitignore  CMakeLists.txt  Readme.md
Task1/: Inside.cpp  Inside.h  Logic.cpp  Logic.h  Piecewise.cpp  Piecewise.h  Task1Api.hpp  Trigonometry.cpp  Trigonometry.h  pch.h
Task1.Tests/: Inside.Tests.cpp  Logic.Tests.cpp  Piecewise.Tests.cpp  Trigonometry.Tests.cpp  pch.h
